// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Box block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-image-box alignfull ugb-image-box ugb-image-box--v3 ugb-image-box--columns-1 ugb-image-box--design-design ugb-image-box--effect-imageHoverEffect ugb-image-box--overlay-3 ugb-image-box--arrow className"
  style={
    Object {
      "--overlay-color": "#123456",
      "textAlign": "horizontalAlign",
    }
  }
>
  <div
    className="ugb-image-box__item ugb--shadow-1"
    style={
      Object {
        "backgroundImage": "url(imageURL1)",
        "borderRadius": 6,
        "height": 200,
        "justifyContent": "verticalAlign",
        "maxWidth": undefined,
        "textAlign": "horizontalAlign",
      }
    }
  >
    <div
      className="ugb-image-box__image-effect"
      style={
        Object {
          "backgroundImage": "url(imageURL1)",
        }
      }
    />
    <a
      className="ugb-image-box__overlay"
      href="link1"
      target="_blank"
    />
    <div
      className="ugb-image-box__content"
    >
      <h4
        className="ugb-image-box__title"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "title1",
            }
          }
        />
      </h4>
      <p
        className="ugb-image-box__description"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "description1",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-image-box__arrow ugb-image-box__arrow--align-arrow"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Image Box block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-image-box ugb-image-box ugb-image-box--v3 ugb-image-box--columns-3"
  style={
    Object {
      "--overlay-color": undefined,
      "textAlign": "center",
    }
  }
>
  <div
    className="ugb-image-box__item"
    style={
      Object {
        "backgroundImage": undefined,
        "borderRadius": 12,
        "height": 400,
        "justifyContent": "center",
        "maxWidth": undefined,
        "textAlign": "center",
      }
    }
  >
    
    <a
      className="ugb-image-box__overlay"
      href=""
    />
    <div
      className="ugb-image-box__content"
    >
      <h4
        className="ugb-image-box__title"
        style={
          Object {
            "color": "#ffffff",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h4>
      <p
        className="ugb-image-box__description"
        style={
          Object {
            "color": "#ffffff",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description",
            }
          }
        />
      </p>
    </div>
    
  </div>
  <div
    className="ugb-image-box__item"
    style={
      Object {
        "backgroundImage": undefined,
        "borderRadius": 12,
        "height": 400,
        "justifyContent": "center",
        "maxWidth": undefined,
        "textAlign": "center",
      }
    }
  >
    
    <a
      className="ugb-image-box__overlay"
      href=""
    />
    <div
      className="ugb-image-box__content"
    >
      <h4
        className="ugb-image-box__title"
        style={
          Object {
            "color": "#ffffff",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h4>
      <p
        className="ugb-image-box__description"
        style={
          Object {
            "color": "#ffffff",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description",
            }
          }
        />
      </p>
    </div>
    
  </div>
  <div
    className="ugb-image-box__item"
    style={
      Object {
        "backgroundImage": undefined,
        "borderRadius": 12,
        "height": 400,
        "justifyContent": "center",
        "maxWidth": undefined,
        "textAlign": "center",
      }
    }
  >
    
    <a
      className="ugb-image-box__overlay"
      href=""
    />
    <div
      className="ugb-image-box__content"
    >
      <h4
        className="ugb-image-box__title"
        style={
          Object {
            "color": "#ffffff",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h4>
      <p
        className="ugb-image-box__description"
        style={
          Object {
            "color": "#ffffff",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description",
            }
          }
        />
      </p>
    </div>
    
  </div>
</div>
`;
